--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-    <title>mperry Line Charts</title>
+    <title>Pink Panther - Wifi Realtime Plots</title>
     <link class="include" rel="stylesheet" type="text/css" href="jquery.jqplot.css" />
     <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="../excanvas.js"></script><![endif]-->
     <script class="include" type="text/javascript" src="jquery.js"></script>
