Almost finished refactoring code base to support Json read in from file, populate new "Target Nodes" list for triangulation calculation and a "Scanned Node" List for realtime information on Nodes around the current device. A Target Node uses the decorator pattern and implements INode. Target Node has a reference to a "Scanned Node". The scanning operation mutex lock has been fixed and now executes continously in its own thread. GET now returns a "System" route which consists of the target Nodes and the Scanned Nodes. Very little work is needed to support the modification of "Target Nodes" using a PUT or POST operation.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,7 @@ $.ajax({
           crossDomain: true,
     success: function (data) {
         console.log(data);
-		data["Nodes"].forEach(function(element){
+		data["Scanned_Nodes"].forEach(function(element){
 			if(element["SSID"]=="eduroam" && element["Channel"]=="2412000000"){
 			eduroamRSSI=element["RSSI"];
 			eduroamDISTANCE=element["Distance"];
