--- a/src/html/Location_Demo/index.html
+++ b/src/html/Location_Demo/index.html
@@ -20,18 +20,34 @@ var Trig1;
 var Trig2;
 var Trig3;
 var Trig4;
+var tempX;
+var tempY;
 
-$(setInterval(getRSSI, 4000));
+function verifyy( y){
+if (y>=0&&y<1200){
+return y;
+}else{
+return tempY;}
+}
+function verifyx( x){
+if (x>=0&&x<1200){
+return x;
+}else{
+return tempX;}
+}
+$(setInterval(getRSSI, 1200));
 
 function drawMap() {
   var canvas = document.getElementById('canvas');
   if (canvas.getContext) {
     var ctx = canvas.getContext('2d');
 	ctx.clearRect(0, 0, canvas.width, canvas.height);
-	var tempX=(XVal/9)*900
-	var tempY=(YVal/9.3)*900
+	tempX=verifyx((XVal/9)*900 +200);
+	tempY=verifyy((YVal/9.3)*900 + 200);
 	ctx.fillStyle = "black";
-    ctx.fillRect(0, 0, 900, 900);
+    ctx.fillRect(0, 0, 1300, 1300);
+		ctx.fillStyle = "#383838";
+    ctx.fillRect(200, 200, 900, 900);
 	ctx.beginPath();
 
 	ctx.fillStyle = "red";
@@ -44,17 +60,34 @@ function drawMap() {
 	ctx.fillText("Z: "+ZVal.toFixed(3),tempX+20,tempY+25);
 	
 		ctx.beginPath();
-	ctx.arc((Trig1["XCoord"]/9)*900,(Trig1["YCoord"]/9.3)*900,20,0,2*Math.PI);
+	ctx.arc((Trig1["XCoord"]/9)*900 +200,(Trig1["YCoord"]/9.3)*900 +200,20,0,2*Math.PI);
 		ctx.fill();
+		
+	ctx.fillText("TRIG1",(Trig1["XCoord"]/9)*900 +220,(Trig1["YCoord"]/9.3)*900 +180);
+	ctx.fillText("X:"+Trig1["XCoord"],(Trig1["XCoord"]/9)*900 +225,(Trig1["YCoord"]/9.3)*900 +200);
+	ctx.fillText("Y:"+Trig1["YCoord"],(Trig1["XCoord"]/9)*900 +225,(Trig1["YCoord"]/9.3)*900 +220);
+	ctx.fillText("Z:"+Trig1["ZCoord"],(Trig1["XCoord"]/9)*900 +225,(Trig1["YCoord"]/9.3)*900 +240);
 			ctx.beginPath();
-	ctx.arc((Trig2["XCoord"]/9)*900,(Trig2["YCoord"]/9.3)*900,20,0,2*Math.PI);
+	ctx.arc((Trig2["XCoord"]/9)*900 + 200,(Trig2["YCoord"]/9.3)*900 + 200,20,0,2*Math.PI);
 		ctx.fill();
+	ctx.fillText("TRIG2",(Trig2["XCoord"]/9)*900 +220,(Trig2["YCoord"]/9.3)*900 +180);
+	ctx.fillText("X:"+Trig2["XCoord"],(Trig2["XCoord"]/9)*900 +225,(Trig2["YCoord"]/9.3)*900 +200);
+	ctx.fillText("Y:"+Trig2["YCoord"],(Trig2["XCoord"]/9)*900 +225,(Trig2["YCoord"]/9.3)*900 +220);
+	ctx.fillText("Z:"+Trig2["ZCoord"],(Trig2["XCoord"]/9)*900 +225,(Trig2["YCoord"]/9.3)*900 +240);
 			ctx.beginPath();
-	ctx.arc((Trig3["XCoord"]/9)*900,(Trig3["YCoord"]/9.3)*900,20,0,2*Math.PI);
+	ctx.arc((Trig3["XCoord"]/9)*900 + 200,(Trig3["YCoord"]/9.3)*900 + 200,20,0,2*Math.PI);
 		ctx.fill();
+	ctx.fillText("TRIG3",(Trig3["XCoord"]/9)*900 +220,(Trig3["YCoord"]/9.3)*900 +180);
+	ctx.fillText("X:"+Trig3["XCoord"],(Trig3["XCoord"]/9)*900 +225,(Trig3["YCoord"]/9.3)*900 +200);
+	ctx.fillText("Y:"+Trig3["YCoord"],(Trig3["XCoord"]/9)*900 +225,(Trig3["YCoord"]/9.3)*900 +220);
+	ctx.fillText("Z:"+Trig3["ZCoord"],(Trig3["XCoord"]/9)*900 +225,(Trig3["YCoord"]/9.3)*900 +240);
 			ctx.beginPath();
-	ctx.arc((Trig4["XCoord"]/9)*900,(Trig4["YCoord"]/9.3)*900,20,0,2*Math.PI);
+	ctx.arc((Trig4["XCoord"]/9)*900 + 200,(Trig4["YCoord"]/9.3)*900 + 200,20,0,2*Math.PI);
 	ctx.fill();
+	ctx.fillText("TRIG4",(Trig4["XCoord"]/9)*900 +220,(Trig4["YCoord"]/9.3)*900 +180);
+	ctx.fillText("X:"+Trig4["XCoord"],(Trig4["XCoord"]/9)*900 +225,(Trig4["YCoord"]/9.3)*900 +200);
+	ctx.fillText("Y:"+Trig4["YCoord"],(Trig4["XCoord"]/9)*900 +225,(Trig4["YCoord"]/9.3)*900 +220);
+	ctx.fillText("Z:"+Trig4["ZCoord"],(Trig4["XCoord"]/9)*900 +225,(Trig4["YCoord"]/9.3)*900 +240);
 	
   }
 }
@@ -95,6 +128,6 @@ $.ajax({
 
 </script>
 </head>
-   <canvas id="canvas" width="900" height="900"></canvas>
+   <canvas id="canvas" width="1300" height="1300"></canvas>
  </body>
 </html>
